--- a/stack.yaml
+++ b/stack.yaml
@@ -1,4 +1,4 @@
-resolver: lts-12.17
+resolver: lts-13.0
 packages:
   - composite-aeson
   - composite-aeson-refined
@@ -10,6 +10,10 @@ packages:
 flags: {}
 extra-deps:
   - opaleye-0.6.7003.1
+  - vinyl-0.8.1.1 # newer versions are not compatible
+  # requirements for example
+  - ekg-0.4.0.15@sha256:f52d7c00654d72d2ab988255f30adba95a52484ac310bab9c136c64732e69f4b
+  - ekg-json-0.1.0.6@sha256:4ff2e9cac213a5868ae8b4a7c72a16a9a76fac14d944ae819b3d838a9725569b
 nix:
   packages:
     - lzma
